Fix(soonki/clubhome): 동아리 소개 페이지에서 overflow시 스크롤이 안되는 버그 수정

--- a/src/styles/Club/Home/Common/frame.module.scss
+++ b/src/styles/Club/Home/Common/frame.module.scss
@@ -3,7 +3,7 @@
   background-color: #c2f2dc8e;
   justify-content: center;
   margin-top: 10vh;
-  overflow: auto;
+  min-height: 100vh;
 }
 .sidebar {
   background-color: white;
