--- a/src/styles/Club/Home/Intro/ClubIntro.module.scss
+++ b/src/styles/Club/Home/Intro/ClubIntro.module.scss
@@ -10,7 +10,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100vh;
   width: 70vw;
 }
 
