--- a/src/styles/Club/Home/Intro/Desc.module.scss
+++ b/src/styles/Club/Home/Intro/Desc.module.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   padding: 5em;
   width: 65%;
+  height: 100%;
   span {
     font-family: "twayair";
     margin-bottom: 3vh;
